# bevy_pixel_world

./: .claudeignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  rust-toolchain.toml  rustfmt.toml
crates/bevy_pixel_world/: Cargo.toml  README.md  build.rs
crates/bevy_pixel_world/benches/: collision_benchmarks.rs  hash_benchmarks.rs  persistence_benchmarks.rs  pixel_world_benchmarks.rs
crates/bevy_pixel_world/benches/common/: tile_processor.rs
crates/bevy_pixel_world/examples/: debug_collision_pipeline.rs  debug_erasure.rs  painting.rs
crates/bevy_pixel_world/examples/debug_erasure/: main.rs  state.rs  test_phases.rs  ui.rs
crates/bevy_pixel_world/src/: basic_persistence.rs  bodies_plugin.rs  coords.rs  creative_mode.rs  culling.rs  debug_camera.rs  debug_controller.rs  debug_controller_ui.rs  debug_shim.rs  lib.rs  material.rs  palette.rs  pixel.rs  plugin_bundle.rs
crates/bevy_pixel_world/src/buoyancy/: events.rs  force.rs  mod.rs  physics.rs  sample.rs  submersion.rs
crates/bevy_pixel_world/src/collision/: cache.rs  contour.rs  debug.rs  marching.rs  mesh.rs  mod.rs  simplify.rs  systems.rs  triangulate.rs
crates/bevy_pixel_world/src/diagnostics/: graph.rs  mod.rs
crates/bevy_pixel_world/src/persistence/: backend.rs  compression.rs  format.rs  index.rs  mod.rs  native.rs  opfs.rs  pixel_body.rs  tasks.rs
crates/bevy_pixel_world/src/pixel_awareness/: grid_sampler.rs  liquid.rs  mod.rs
crates/bevy_pixel_world/src/pixel_body/: blit.rs  bomb.rs  collider.rs  loader.rs  mod.rs  readback.rs  spawn.rs  split.rs
crates/bevy_pixel_world/src/pixel_camera/: material.rs  mod.rs  setup.rs  state.rs  systems.rs
crates/bevy_pixel_world/src/primitives/: chunk.rs  mod.rs  surface.rs
crates/bevy_pixel_world/src/render/: material.rs  mod.rs  pipeline.rs  render.rs  rgba.rs
crates/bevy_pixel_world/src/scheduling/: blitter.rs  canvas.rs  checkerboard.rs  mod.rs
crates/bevy_pixel_world/src/seeding/: mod.rs  noise.rs  sdf.rs
crates/bevy_pixel_world/src/simulation/: burning.rs  hash.rs  heat.rs  mod.rs  physics.rs
crates/bevy_pixel_world/src/submergence/: events.rs  mod.rs  physics.rs  sample.rs
crates/bevy_pixel_world/src/text/: font.rs  mod.rs
crates/bevy_pixel_world/src/virtual_camera/: components.rs  mod.rs  systems.rs
crates/bevy_pixel_world/src/visual_debug/: gizmos.rs  mod.rs  persistence.rs  settings.rs  systems.rs  ui.rs
crates/bevy_pixel_world/src/world/: blast.rs  blit.rs  body_loader.rs  bundle.rs  control.rs  mod.rs  persistence.rs  persistence_systems.rs  pixel_access.rs  plugin.rs  pool.rs  slot.rs  streaming.rs
crates/bevy_pixel_world/tests/: body_persistence_e2e.rs  body_rapier2d_e2e.rs  body_reload_stress.rs  body_stability_e2e.rs  editor_mode_persistence_e2e.rs  gremlins_stress.rs  hash_test.rs  material_config_roundtrip.rs  named_saves_e2e.rs  persistence_bevy_e2e.rs  persistence_e2e.rs  spawn_pixel_body_e2e.rs  submergence_e2e.rs  triangulate.rs
crates/game/: Cargo.toml  README.md  Trunk.toml  build.rs  index.html  manifest.json  sw.js  worker.js
crates/game/src/: lib.rs  main.rs  platform.rs  time_of_day.rs
crates/game/src/ambiance/: clock_widget.rs  mod.rs  sky.rs
crates/game/src/config/: mod.rs  plugin.rs
crates/game/src/console/: history.rs  mod.rs  toggle.rs
crates/game/src/core/: camera.rs  mod.rs  physics.rs
crates/game/src/editor/: actions.rs  mod.rs  noise.rs  ui.rs
crates/game/src/input/: actions.rs  bindings.rs  mod.rs
crates/game/src/pixel_world/: basic_persistence.rs  bodies_plugin.rs  coords.rs  creative_mode.rs  debug_camera.rs  debug_controller.rs  debug_controller_ui.rs  debug_shim.rs  material.rs  mod.rs  palette.rs  pixel.rs  plugin_bundle.rs  schedule.rs  tracy_init.rs
crates/game/src/player/: components.rs  flight.rs  interpolation.rs  mod.rs  movement.rs  palettize.rs  spawn.rs  spawn_body.rs  tests.rs
crates/game/src/visual_debug/: mod.rs
crates/game/src/world/: mod.rs  platforms.rs
crates/game/tests/: camera_mode_transition_e2e.rs  crt_config_reload_e2e.rs  pixel_world.rs
crates/game/tests/pixel_world/: body_persistence_e2e.rs  body_rapier2d_e2e.rs  body_reload_stress.rs  body_stability_e2e.rs  editor_mode_persistence_e2e.rs  gremlins_stress.rs  material_config_roundtrip.rs  named_saves_e2e.rs  persistence_bevy_e2e.rs  persistence_e2e.rs  spawn_pixel_body_e2e.rs  submergence_e2e.rs  triangulate.rs
crates/pixel_world/: Cargo.toml
crates/pixel_world/benches/: hash_benchmarks.rs  persistence_benchmarks.rs  pixel_world_benchmarks.rs
crates/pixel_world/benches/common/: mod.rs  tile_processor.rs
crates/pixel_world/examples/: painting.rs  rolling_grid.rs  simulation.rs  text_demo.rs  uv_quad.rs
crates/pixel_world/src/: blitter.rs  chunk.rs  coords.rs  debug_shim.rs  lib.rs  material.rs  pixel.rs  render.rs  surface.rs  tracy_init.rs
crates/pixel_world/src/canvas/: blitter.rs  mod.rs
crates/pixel_world/src/core/: blitter.rs  chunk.rs  mod.rs  rect.rs  surface.rs
crates/pixel_world/src/debug/: font.rs
crates/pixel_world/src/diagnostics/: mod.rs  time_series.rs
crates/pixel_world/src/parallel/: blitter.rs  mod.rs
crates/pixel_world/src/persistence/: compression.rs  format.rs  index.rs  mod.rs
crates/pixel_world/src/primitives/: blitter.rs  chunk.rs  mod.rs  surface.rs
crates/pixel_world/src/render/: material.rs  mod.rs  render.rs  rgba.rs
crates/pixel_world/src/scheduling/: blitter.rs
crates/pixel_world/src/seeding/: mod.rs  noise.rs  sdf.rs
crates/pixel_world/src/shaders/: chunk.wgsl
crates/pixel_world/src/simulation/: hash.rs  mod.rs  physics.rs  rules.rs
crates/pixel_world/src/streaming/: mod.rs  pool.rs  window.rs
crates/pixel_world/src/visual_debug/: colors.rs  gizmos.rs  mod.rs  systems.rs
crates/pixel_world/src/world/: bundle.rs  mod.rs  plugin.rs  slot.rs  streaming.rs
crates/pixel_world/tests/: hash_test.rs  persistence_bevy_e2e.rs  persistence_e2e.rs
crates/sim2d_noise/: Cargo.toml  Makefile  README.md
crates/sim2d_noise/js/: sim2d_noise_bridge.js
crates/sim2d_noise/src/: lib.rs  native.rs  wasm_main.rs
(+303 files in other folders)
