[workspace]
resolver = "3"
members = ["crates/bevy_pixel_world", "crates/noise_ipc"]
# sim2d_noise is excluded: builds to wasm32-unknown-emscripten via Makefile
exclude = ["crates/sim2d_noise"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bevy = "0.17"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
incremental = true
lto = "off"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Optimize bevy_pixel_world (workspace member, not covered by wildcard above)
[profile.dev.package.bevy_pixel_world]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"

# Profiling profile for cargo-samply (optimized with debug symbols)
[profile.samply]
inherits = "release"
debug = true
