[package]
name = "bevy_pixel_world"
version.workspace = true
edition.workspace = true
description = "Infinite cellular automata simulation plugin for Bevy"
license = "MIT"
repository = "https://github.com/api-haus/bevy_pixel_world"
keywords = ["bevy", "pixel", "simulation", "cellular-automata", "sandbox"]
categories = ["game-development", "simulation"]

[dependencies]
bevy = { workspace = true }
ab_glyph = "0.2"
spade = "2"
dirs = "5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
fastnoise2 = "0.4"
lz4_flex = "0.11"
palette = { version = "0.7", default-features = false, features = ["std"] }
paste = "1.0"
bitflags = "2"
rayon = "1.10"
bevy_egui = { version = "0.37", optional = true }
tracing = { version = "0.1", optional = true }
tracing-tracy = { version = "0.11", optional = true, default-features = false, features = ["flush-on-exit"] }
tracing-subscriber = { version = "0.3", optional = true, default-features = false, features = ["registry"] }
avian2d = { version = "0.4", optional = true }
bevy_rapier2d = { version = "0.32", optional = true }

[dev-dependencies]
bevy_egui = "0.37"
rand = "0.8"
tempfile = "3"

[[test]]
name = "persistence_bevy_e2e"
required-features = ["headless"]

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking", "visual-debug", "diagnostics"]
headless = []
visual-debug = []
diagnostics = ["dep:bevy_egui"]
tracy = ["dep:tracing", "dep:tracing-tracy", "dep:tracing-subscriber"]
avian2d = ["dep:avian2d"]
rapier2d = ["dep:bevy_rapier2d"]
