[package]
name = "game"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sim2d"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
bevy_rapier2d = "0.32"
bevy_enhanced_input = "0.19"
rand = "0.9"
bevy_egui = "0.37"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
bevy_common_assets = { version = "0.14", features = ["toml"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rayon = "1.11.0"
bevy_pixel_world = { path = "../bevy_pixel_world", features = ["rapier2d"] }
bevy_console = "0.16"
clap = { version = "4.5", features = ["derive"] }
bevy-yoleck = { version = "0.29", optional = true, features = ["vpeol_2d"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dirs = "6"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1"

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking", "bevy/file_watcher", "editor"]
editor = ["dep:bevy-yoleck"]
