[package]
name = "game"
version = "0.1.0"
edition = "2024"

[workspace]

[[bin]]
name = "sim2d"
path = "src/main.rs"

[dependencies]
bevy = "0.17"
bevy_rapier2d = "0.32"
bevy_enhanced_input = "0.19"
rand = "0.9"
bevy_egui = "0.37"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
bevy_common_assets = { version = "0.14", features = ["toml"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rayon = "1.11.0"
bevy_pixel_world = { path = "../bevy_pixel_world", features = ["rapier2d"] }
bevy_console = "0.16"
clap = { version = "4.5", features = ["derive"] }
bevy-yoleck = { version = "0.29", optional = true, features = ["vpeol_2d"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dirs = "6"
noise_ipc = { path = "../noise_ipc" }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1"

[features]
default = []
dev = ["bevy/dynamic_linking", "bevy/file_watcher", "editor"]
editor = ["dep:bevy-yoleck"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
incremental = true
lto = "off"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Optimize bevy_pixel_world
[profile.dev.package.bevy_pixel_world]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"

# Profiling profile for cargo-samply (optimized with debug symbols)
[profile.samply]
inherits = "release"
debug = true
