[package]
name = "pixel_world"
version.workspace = true
edition.workspace = true
description = "Infinite cellular automata simulation plugin for Bevy"

[dependencies]
bevy = { workspace = true }
ab_glyph = "0.2"
fastnoise2 = "0.4"
paste = "1.0"
rayon = "1.10"
bevy_egui = { version = "0.37", optional = true }
tracing = { version = "0.1", optional = true }
tracing-tracy = { version = "0.11", optional = true, default-features = false, features = ["flush-on-exit"] }
tracing-subscriber = { version = "0.3", optional = true, default-features = false, features = ["registry"] }

[dev-dependencies]
bevy_egui = "0.37"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pixel_world_benchmarks"
harness = false

[[bench]]
name = "hash_benchmarks"
harness = false

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking", "visual-debug", "diagnostics"]
visual-debug = []
diagnostics = ["dep:bevy_egui"]
tracy = ["dep:tracing", "dep:tracing-tracy", "dep:tracing-subscriber"]
